<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/abc_dialog_padding_material"
            android:layout_marginRight="@dimen/abc_dialog_padding_material"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_message_not_rooted"
                />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="?backgroundColorLight"
                app:cardCornerRadius="2dp"
                >

                <RelativeLayout
                    style="@style/Fill.Width"
                    android:paddingBottom="16dp"
                    >

                    <TextView
                        android:id="@+id/result_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/root_check_result_text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        />

                    <View
                        android:id="@+id/result_divider"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/result_title"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="?dividerColor"
                        />

                    <ImageView
                        android:id="@+id/svg_logo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_below="@id/result_divider"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/red_x_dialogue"
                        />

                    <LinearLayout
                        android:id="@+id/texts_container"
                        style="@style/Wrap"
                        android:layout_below="@id/result_divider"
                        android:layout_marginEnd="12dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginStart="12dp"
                        android:layout_toRightOf="@id/svg_logo"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        >

                        <TextView
                            android:id="@+id/device_name"
                            style="@style/Fill.Width"
                            android:layout_marginBottom="6dp"
                            android:gravity="center_horizontal"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            />

                        <TextView
                            android:id="@+id/root_disabled_hint"
                            style="@style/Fill.Width"
                            android:layout_below="@+id/texts_container"
                            android:layout_toRightOf="@id/svg_logo"
                            android:gravity="center_horizontal"
                            android:text="@string/root_disabled_hint"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="11sp"
                            tools:ignore="SmallSp"
                            />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="?backgroundColorLight"
                app:cardCornerRadius="2dp"
                >

                <RelativeLayout
                    style="@style/Fill.Width"
                    android:paddingBottom="16dp"
                    >

                    <TextView
                        android:id="@+id/result_title2"
                        style="@style/Fill.Width"
                        android:layout_margin="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/root_check_hint"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="11sp"
                        />

                    <View
                        android:id="@+id/result_divider2"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/result_title2"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="?dividerColor"
                        />

                    <ImageView
                        android:id="@+id/svg_logo2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_below="@id/result_divider2"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/rootcheck_icon_dialoge"
                        />

                    <LinearLayout
                        android:id="@+id/texts_container2"
                        style="@style/Wrap"
                        android:layout_width="match_parent"
                        android:layout_below="@id/result_divider2"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="4dp"
                        android:layout_toRightOf="@id/svg_logo2"
                        android:orientation="vertical"
                        android:paddingRight="16dp"
                        >

                        <TextView
                            style="@style/Fill.Width"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/root_check_title"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/root_disabled_hint2"
                            style="@style/Fill.Width"
                            android:layout_below="@+id/texts_container2"
                            android:layout_marginBottom="8dp"
                            android:layout_toRightOf="@id/svg_logo2"
                            android:text="@string/check_device_root_status_learn_more_about_root"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="11sp"
                            tools:ignore="SmallSp"
                            />

                        <TextView
                            android:id="@+id/install_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/root_disabled_hint2"
                            android:background="@drawable/bg_button_effect_root_check"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:paddingBottom="8dp"
                            android:paddingLeft="36dp"
                            android:paddingRight="36dp"
                            android:paddingTop="8dp"
                            android:text="@string/install"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>